base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: be
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: be
    spec:
      containers:
      - image: jcy0308/aegen-be
        imagePullPolicy: Always
        name: be
        ports:
        - containerPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fe
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fe
    spec:
      containers:
      - image: jcy0308/aegen-fe
        imagePullPolicy: Always
        name: fe
        ports:
        - containerPort: 3000
