base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: be
---
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: fe
